--- a/apps/judicial-system/web/tsconfig.json
+++ b/apps/judicial-system/web/tsconfig.json
@@ -9,5 +9,5 @@
     "isolatedModules": true
   },
   "include": ["**/*.ts", "**/*.tsx", "next-env.d.ts"],
-  "exclude": ["node_modules", "**/*.spec.ts", "**/*.spec.tsx", "**/mocks.ts"]
+  "exclude": ["node_modules"]
 }
