Fixing storybook build and babel warnings.

--- a/package.json
+++ b/package.json
@@ -89,9 +89,9 @@
     "@sentry/tracing": "6.9.0",
     "@sindresorhus/slugify": "1.0.0",
     "@statoscope/webpack-plugin": "5.20.1",
-    "@storybook/builder-webpack5": "~6.4.5",
-    "@storybook/core-server": "6.4.22",
-    "@storybook/manager-webpack5": "~6.4.5",
+    "@storybook/builder-webpack5": "6.5.8",
+    "@storybook/core-server": "6.5.8",
+    "@storybook/manager-webpack5": "6.5.8",
     "@types/faker": "5.5.3",
     "@types/nodemailer": "6.4.1",
     "@types/passport-jwt": "3.0.3",
@@ -317,12 +317,13 @@
     "@nrwl/workspace": "13.10.5",
     "@openapitools/openapi-generator-cli": "1.0.15-4.3.1",
     "@sentry/webpack-plugin": "1.12.1",
-    "@storybook/addon-a11y": "6.3.1",
-    "@storybook/addon-essentials": "6.4.22",
-    "@storybook/addons": "6.3.1",
-    "@storybook/react": "6.4.22",
-    "@storybook/source-loader": "6.3.1",
-    "@storybook/theming": "6.3.1",
+    "@storybook/addon-a11y": "6.5.8",
+    "@storybook/addon-essentials": "6.5.8",
+    "@storybook/addons": "6.5.8",
+    "@storybook/core": "6.5.8",
+    "@storybook/react": "6.5.8",
+    "@storybook/source-loader": "6.5.8",
+    "@storybook/theming": "6.5.8",
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "12.1.5",
     "@testing-library/react-hooks": "7.0.2",
@@ -406,7 +407,7 @@
     "sort-paths": "1.1.1",
     "sqlite3": "5.0.8",
     "storybook-addon-apollo-client": "4.0.11",
-    "storybook-addon-designs": "6.0.1",
+    "storybook-addon-designs": "6.2.1",
     "ts-dedent": "2.0.0",
     "ts-jest": "27.0.5",
     "ts-node": "10.2.1",
