Update client config in islyklar service

--- a/libs/clients/islykill/src/clientConfig.yaml
+++ b/libs/clients/islykill/src/clientConfig.yaml
@@ -106,7 +106,10 @@ paths:
           x-nullable: true
       responses:
         '200':
+          x-nullable: false
           description: ''
+          schema:
+            $ref: '#/definitions/PublicUser'
         '400':
           x-nullable: false
           description: ''
