--- a/.github/workflows/config-values.yaml
+++ b/.github/workflows/config-values.yaml
@@ -121,6 +121,7 @@ jobs:
           prod: arn:aws:iam::251502586493:role/list-ssm-parameters
           dev: arn:aws:iam::013313053092:role/list-ssm-parameters
           staging: arn:aws:iam::261174024191:role/list-ssm-parameters
+          ids: arn:aws:iam::567113216315:role/list-ssm-parameters
         run: echo "ROLE=$${{ matrix.env }}" >> $GITHUB_ENV
       - name: Get local secrets
         working-directory: infra
