--- a/package.json
+++ b/package.json
@@ -234,8 +234,8 @@
     "react-pdf": "5.2.0",
     "react-popper": "2.2.5",
     "react-remove-scroll": "2.4.0",
+    "react-router": "5.3.3",
     "react-router-dom": "5.3.0",
-    "react-router-dom-v5-compat": "6.3.0",
     "react-select": "3.1.0",
     "react-table": "7.7.0",
     "react-toastify": "6.0.8",
