--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -172,6 +172,7 @@
 /apps/services/personal-representative-public/                                                      @island-is/programm
 /libs/api/domains/financial-statements-inao/                                                        @island-is/programm
 /libs/application/templates/financial-statements-inao/                                              @island-is/programm
+/libs/application/template-api-modules/src/lib/modules/templates/financial-statements-inao          @island-is/programm
 
 /libs/application/templates/criminal-record/                                                        @island-is/origo
 /libs/application/template-api-modules/src/lib/modules/templates/criminal-record-submission         @island-is/origo
