feat: name change!

--- a/nx.json
+++ b/nx.json
@@ -322,7 +322,7 @@
     "cache": {
       "tags": []
     },
-    "clients-aosh": {
+    "clients-adr-and-machine-license": {
       "tags": []
     },
     "clients-assets": {
