type lib added to application

--- a/nx.json
+++ b/nx.json
@@ -291,6 +291,9 @@
     "application-templates-reference-template": {
       "tags": []
     },
+    "application-types": {
+      "tags": []
+    },
     "application-ui-components": {
       "tags": []
     },
