codeowners for form-fields

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -138,6 +138,7 @@
 /libs/application/templates/general-fishing-license/                                                @island-is/sendiradid
 /libs/application/template-api-modules/src/lib/modules/templates/general-fishing-license/           @island-is/sendiradid
 /libs/application/template-api-modules/src/lib/modules/templates/data-protection-complaint/         @island-is/sendiradid
+/libs/shared/form-fields/                                                                           @island-is/sendiradid @island-is/island-ui
 
 /libs/api/domains/application/                                                                      @island-is/sendiradid-applications
 
