feat: bootstrap client for smartsolution graphql api

--- a/nx.json
+++ b/nx.json
@@ -395,6 +395,9 @@
     "clients-rsk-procuring": {
       "tags": []
     },
+    "clients-smartsolutions": {
+      "tags": []
+    },
     "clients-syslumenn": {
       "tags": []
     },
