feat: initial client creation

--- a/nx.json
+++ b/nx.json
@@ -353,6 +353,9 @@
     "clients-finance": {
       "tags": []
     },
+    "clients-firearm-license": {
+      "tags": []
+    },
     "clients-fishing-license": {
       "tags": []
     },
