Add records for Júní in CODEOWNERS for AOD

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -43,6 +43,8 @@
 /libs/contentful-extensions/mideind-translation/                                                    @island-is/juni
 /libs/contentful-extensions/parent-slug/                                                            @island-is/juni
 /libs/clients/driving-license/                                                                      @island-is/juni
+/libs/application/templates/announcement-of-death/                                                  @island-is/juni
+/libs/application/template-api-modules/src/lib/modules/templates/announcement-of-death              @island-is/juni
 /libs/application/templates/driving-license/                                                        @island-is/juni
 /libs/application/templates/driving-assessment-approval/                                            @island-is/juni
 /libs/application/template-api-modules/src/lib/modules/templates/driving-license-submission         @island-is/juni
