--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "apollo-link-http-common": "0.2.16",
     "apollo-link-retry": "2.2.16",
     "apollo-server-cache-redis": "1.2.1",
+    "apollo-server-env": "2.4.5",
     "apollo-server-express": "2.14.3",
     "apollo-server-plugin-base": "0.9.0",
     "apollo-server-plugin-response-cache": "0.5.3",
