feat(service-portal): add ADR and machine licenses to generic license service (#7454)
* feat: created api client

* wip: generalising adr license

* wip: ADR license integration

* feat: added machine license

* fix: little fixes

* fix: lil linting

* fix: fixed up api structure

* fix: simplified and changed api

* fix:build

* chore: formatting

* fix: fixes here and there

* fix: linting

* feat:placeholder styling for license details

* Delete generate_schemas.sh

* feat: documenting

* fix: fix build

* fix/formatting

* fix: delete settings.json

* fix: cleaning

* fix: more cleaning up

* fix: finality

* feat: generic overview with specific drivers license

* fix: works

* feat: created api client

* wip: generalising adr license

* wip: ADR license integration

* feat: added machine license

* fix: little fixes

* fix: lil linting

* fix: fixed up api structure

* fix: simplified and changed api

* fix:build

* chore: formatting

* fix: fixes here and there

* fix: linting

* feat:placeholder styling for license details

* Delete generate_schemas.sh

* feat: documenting

* fix: fix build

* fix/formatting

* fix: delete settings.json

* fix: cleaning

* fix: more cleaning up

* fix: finality

* fix: cosmetic changes

* feat: changing aoshc lients to use auth

* fix: small fix

* wip: implement xroad

* feat: integrated with xroad and auth

* fix: cleanup for build

* wip: testing

* fix: delete broken tests

* fix: add patsh to env

* fix: remove console

* feat: add xroad to infra

* fix: finish secret infra

* fix: small changes

* fix: name changed from aosh -> adr and machine license

* feat: name change!

* fix: proofread readme

* fix: remove weapon license and some cleanup, plus todos

* feat: removed all ui components from adr and machine license

* fix: cleanup messages

* fix: cleanup more

* fix: formatting

* feat: fix broken service

* fix: cleanup

* fix: typing

* feat: fixed labelling

* feat: change adr rights payload

* fix: typo

* fix: 

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -103,6 +103,7 @@
 /libs/api/domains/vehicles/                                                                         @island-is/hugsmidjan
 /libs/clients/documents/                                                                            @island-is/hugsmidjan
 /libs/clients/finance/                                                                              @island-is/hugsmidjan
+/libs/clients/adr-and-machine-license/                                                              @island-is/hugsmidjan
 /libs/clients/islykill/                                                                             @island-is/hugsmidjan
 /libs/clients/national-registry/v1/                                                                 @island-is/hugsmidjan
 /libs/clients/regulations/                                                                          @island-is/hugsmidjan
