--- a/nx.json
+++ b/nx.json
@@ -322,6 +322,9 @@
     "cache": {
       "tags": []
     },
+    "clients-adr-and-machine-license": {
+      "tags": []
+    },
     "clients-assets": {
       "tags": []
     },
