--- a/.github/workflows/config-values.yaml
+++ b/.github/workflows/config-values.yaml
@@ -40,8 +40,7 @@ jobs:
         id: select_envs
         run: |
           GIT_BRANCH="${GITHUB_HEAD_REF:-${GITHUB_REF/refs\/heads\//}}"
-          # ENVS=("dev" "staging")
-          ENVS=("dev" "staging" "prod" "ids_prod")
+          ENVS=("dev" "staging")
           if [[ $GIT_BRANCH =~ ^release\/ ]]; then
             echo "Adding prod environments to test set"
             ENVS+=("prod")
@@ -122,7 +121,6 @@ jobs:
           prod: arn:aws:iam::251502586493:role/list-ssm-parameters
           dev: arn:aws:iam::013313053092:role/list-ssm-parameters
           staging: arn:aws:iam::261174024191:role/list-ssm-parameters
-          ids_prod: arn:aws:iam::567113216315:role/list-ssm-parameters
         run: echo "ROLE=$${{ matrix.env }}" >> $GITHUB_ENV
       - name: Get local secrets
         working-directory: infra
