--- a/.github/workflows/config-values.yaml
+++ b/.github/workflows/config-values.yaml
@@ -145,6 +145,10 @@ jobs:
       - name: Configure AWS Credentials for IDS Prod
         uses: aws-actions/configure-aws-credentials@v1
         with:
+          aws-access-key-id: ${{ secrets.DESCRIBE_SSM_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.DESCRIBE_SSM_AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
+          role-duration-seconds: 900
           role-to-assume: arn:aws:iam::567113216315:role/list-ssm-parameters
 
       - name: Get secrets in IDS Prod AWS
