Add passports api client

--- a/nx.json
+++ b/nx.json
@@ -377,6 +377,9 @@
     "clients-national-registry-v2": {
       "tags": []
     },
+    "clients-passports": {
+      "tags": []
+    },
     "clients-payment": {
       "tags": []
     },
