--- a/apps/system-e2e/.eslintrc
+++ b/apps/system-e2e/.eslintrc
@@ -1,1 +1,8 @@
-{"extends":"../../.eslintrc","rules":{},"ignorePatterns":["!**/*"]}
+{
+  "extends": ["../../.eslintrc.json", "plugin:cypress/recommended"],
+  "rules": {
+    "no-prototype-builtins": "off",
+    "@typescript-eslint/triple-slash-reference": "off"
+  },
+  "ignorePatterns": ["!**/*"]
+}
