--- a/apps/system-e2e/tsconfig.json
+++ b/apps/system-e2e/tsconfig.json
@@ -1,26 +1,16 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compileOnSave": false,
   "compilerOptions": {
-    "rootDir": ".",
-    "declaration": false,
+    "sourceMap": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "es2015",
-    "typeRoots": ["node_modules/@types"],
-    "lib": ["es2017", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
-    "strict": true,
-    "sourceMap": false,
-    "outDir": "dist/out-tsc",
-    "allowJs": true,
-    "types": ["cypress", "node"],
-    "module": "es2015"
+    "types": ["cypress", "node", "@testing-library/cypress"]
   },
-  "exclude": ["node_modules", "tmp"],
-  "include": ["src/**/*.ts", "src/**/*.js"]
+  "include": ["src/**/*.ts"]
 }
