--- a/package.json
+++ b/package.json
@@ -278,11 +278,13 @@
     "@anatine/esbuild-decorators": "^0.2.4",
     "@aws-sdk/client-ssm": "3.49.0",
     "@babel/core": "7.13.8",
+    "@babel/helper-skip-transparent-expression-wrappers": "7.16.0",
     "@babel/plugin-proposal-decorators": "7.17.8",
     "@babel/plugin-transform-runtime": "7.12.10",
     "@babel/preset-env": "7.8.7",
     "@babel/preset-react": "7.8.3",
     "@babel/preset-typescript": "7.16.5",
+    "@cypress/webpack-preprocessor": "5.12.0",
     "@gperdomor/nx-docker": "0.2.3",
     "@graphql-codegen/cli": "1.17.8",
     "@graphql-codegen/fragment-matcher": "1.17.8",
@@ -318,6 +320,7 @@
     "@storybook/react": "6.3.1",
     "@storybook/source-loader": "6.3.1",
     "@storybook/theming": "6.3.1",
+    "@testing-library/cypress": "8.0.3",
     "@testing-library/dom": "7.29.1",
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.1.2",
@@ -375,7 +378,7 @@
     "cross-spawn": "7.0.3",
     "csstype": "2.6.13",
     "csv-parse": "4.16.0",
-    "cypress": "10.2.0",
+    "cypress": "10.3.0",
     "cypress-file-upload": "5.0.8",
     "dotenv": "14.3.2",
     "esbuild": "0.12.1",
@@ -404,9 +407,11 @@
     "ts-dedent": "2.0.0",
     "ts-jest": "26.4.0",
     "ts-node": "10.2.1",
+    "tsconfig-paths-webpack-plugin": "3.5.2",
     "type-fest": "1.1.3",
     "typescript": "4.2.4",
-    "webpack-bundle-analyzer": "3.9.0"
+    "webpack-bundle-analyzer": "3.9.0",
+    "webpack-cli": "4.10.0"
   },
   "resolutions": {
     "@graphql-tools/git-loader": "6.2.6",
