Moving along again, finally

--- a/package.json
+++ b/package.json
@@ -341,6 +341,7 @@
     "@types/http-cache-semantics": "4.0.1",
     "@types/http-proxy-middleware": "0.19.3",
     "@types/identicon.js": "2.3.0",
+    "@types/imap-simple": "4.2.5",
     "@types/is-url": "1.2.28",
     "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "26.0.8",
@@ -348,6 +349,7 @@
     "@types/js-cookie": "2.2.6",
     "@types/js-yaml": "4.0.3",
     "@types/lodash": "4.14.160",
+    "@types/mailparser": "3.4.0",
     "@types/memoizee": "0.4.5",
     "@types/node": "14.17.17",
     "@types/opossum": "4.1.1",
@@ -390,12 +392,14 @@
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
     "fetch-mock": "9.10.7",
+    "imap-simple": "5.1.0",
     "inspectpack": "4.5.2",
     "jest": "26.2.2",
     "jest-mock-extended": "1.0.10",
     "jest-resolve": "26.6.2",
     "jest-transform-stub": "2.0.0",
     "license-checker": "25.0.1",
+    "mailparser": "3.5.0",
     "next-secure-headers": "2.1.0",
     "prettier": "2.2.1",
     "quicktype": "15.0.258",
