--- a/charts/judicial-system/values.dev.yaml
+++ b/charts/judicial-system/values.dev.yaml
@@ -258,6 +258,8 @@ judicial-system-message-handler:
   image:
     repository: '821090935708.dkr.ecr.eu-west-1.amazonaws.com/judicial-system-message-handler'
   namespace: 'judicial-system'
+  podSecurityContext:
+    fsGroup: 65534
   replicaCount:
     default: 2
     max: 3
@@ -275,6 +277,11 @@ judicial-system-message-handler:
   securityContext:
     allowPrivilegeEscalation: false
     privileged: false
+  serviceAccount:
+    annotations:
+      eks.amazonaws.com/role-arn: 'arn:aws:iam::013313053092:role/judicial-system-message-handler'
+    create: true
+    name: 'judicial-system-message-handler'
 judicial-system-scheduler:
   args:
     - 'main.js'
