fix(island-ui): Prevent tree shaking of global styles in NextJS projects

--- a/libs/island-ui/core/package.json
+++ b/libs/island-ui/core/package.json
@@ -2,6 +2,7 @@
   "name": "@island.is/island-ui-core",
   "sideEffects": [
     "src/index.ts",
+    "src/styles/global.css.ts",
     "src/utils/globalStyles.ts"
   ]
 }
