fix(application-system-payment): Incorporate FJS claim (fella niður kröfu) (#7950)
* init

* Change prune time and add delete button
for CR and MC

* Setup ChargeFjsV2Client

* Cleanup ChargeFjsV2
Delete charge on application prune
Delete entry in Payment table when deleting application
Delete charge on applitcation delete

* Fix autoAuth configuration for chargeFjsV2

* Include externalData field when fetching application to
prune, to be able to fetch the chargeId

* Update example payment template

* Update codeowners

* Move delete-charge function to separate service
Throw error (and dont continue) if an error occurs while deleting charge

* Continue pruning data, if deleting charge fails
(but keep chargeId in externalData)

* Change prune time to 1 hour

* Fixed for code review

* Cleanup test

* Fix helm-values-validation error

* Fix lint error

* Fixes from codereview

* Add back api_resource.scope

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -188,6 +188,8 @@
 
 /libs/application/templates/no-debt-certificate/                                                    @island-is/origo
 
+/libs/clients/charge-fjs-v2/                                                                        @island-is/origo
+
 # Temporary assignment while the QA bootstrap project is in progress
 /apps/system-e2e/                                                                                   @island-is/qa
 
