--- a/charts/judicial-system/values.prod.yaml
+++ b/charts/judicial-system/values.prod.yaml
@@ -222,6 +222,66 @@ judicial-system-backend:
       eks.amazonaws.com/role-arn: 'arn:aws:iam::251502586493:role/judicial-system-backend'
     create: true
     name: 'judicial-system-backend'
+judicial-system-message-handler:
+  args:
+    - 'main.js'
+  command:
+    - 'node'
+  enabled: true
+  env:
+    BACKEND_URL: 'http://web-judicial-system-backend'
+    NODE_OPTIONS: '--max-old-space-size=208'
+    SERVERSIDE_FEATURES_ON: 'driving-license-use-v1-endpoint-for-v2-comms,INAO_Client'
+    SQS_DEAD_LETTER_QUEUE_NAME: 'sqs-judicial-system-dlq'
+    SQS_QUEUE_NAME: 'sqs-judicial-system'
+    SQS_REGION: 'eu-west-1'
+  grantNamespaces:
+    - 'nginx-ingress-external'
+  grantNamespacesEnabled: true
+  healthCheck:
+    liveness:
+      initialDelaySeconds: 3
+      path: '/liveness'
+      timeoutSeconds: 3
+    readiness:
+      initialDelaySeconds: 3
+      path: '/liveness'
+      timeoutSeconds: 3
+  hpa:
+    scaling:
+      metric:
+        cpuAverageUtilization: 70
+        nginxRequestsIrate: 2
+      replicas:
+        max: 10
+        min: 3
+  image:
+    repository: '821090935708.dkr.ecr.eu-west-1.amazonaws.com/judicial-system-message-handler'
+  namespace: 'judicial-system'
+  podSecurityContext:
+    fsGroup: 65534
+  replicaCount:
+    default: 3
+    max: 10
+    min: 3
+  resources:
+    limits:
+      cpu: '200m'
+      memory: '256Mi'
+    requests:
+      cpu: '100m'
+      memory: '128Mi'
+  secrets:
+    BACKEND_ACCESS_TOKEN: '/k8s/judicial-system/BACKEND_ACCESS_TOKEN'
+    CONFIGCAT_SDK_KEY: '/k8s/configcat/CONFIGCAT_SDK_KEY'
+  securityContext:
+    allowPrivilegeEscalation: false
+    privileged: false
+  serviceAccount:
+    annotations:
+      eks.amazonaws.com/role-arn: 'arn:aws:iam::251502586493:role/judicial-system-message-handler'
+    create: true
+    name: 'judicial-system-message-handler'
 judicial-system-scheduler:
   args:
     - 'main.js'
