--- a/libs/clients/regulations/.eslintrc.json
+++ b/libs/clients/regulations/.eslintrc.json
@@ -1,7 +1,7 @@
 {
-  "extends": "../../../.eslintrc.json",
-  "rules": {},
+  "extends": ["../../../.eslintrc.json"],
   "ignorePatterns": ["!**/*"],
+  "rules": {},
   "overrides": [
     { "files": ["*.ts", "*.tsx", "*.js", "*.jsx"], "rules": {} },
     { "files": ["*.ts", "*.tsx"], "rules": {} },
