--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -112,6 +112,9 @@
       "@island.is/api/domains/license-service": [
         "libs/api/domains/license-service/src/index.ts"
       ],
+      "@island.is/api/domains/mailchimp": [
+        "libs/api/domains/mailchimp/src/index.ts"
+      ],
       "@island.is/api/domains/mortgage-certificate": [
         "libs/api/domains/mortgage-certificate/src/index.ts"
       ],
